src/evaluator/infix/snapshots/rust_monkey_interpreter__evaluator__infix__tests__test_evaluator_infix_integer_nodes_case1.snap
---
source: src/evaluator/infix/tests.rs
expression: "crate::evaluator::evaluate(crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
{
  "INTEGER": {
    "value": 10
  }
}
